[tool.poetry]
name = "sceptre-kms-resolver"
version = "1.0.2"
packages = [{ include = "resolver" }]
readme = "README.md"
homepage = "https://github.com/Sceptre/sceptre-kms-resolver"
repository = "https://github.com/Sceptre/sceptre-kms-resolver"
authors = ["Sceptre <sceptreorg@gmail.com>"]
description = "A Sceptre resolver to retrieve and decrypt values from AWS KMS"
keywords = ["sceptre", "sceptre-resolver"]
license = "Apache-2.0"
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Environment :: Console",
]

[tool.poetry.plugins."sceptre.resolvers"]
"kms" = "resolver.kms:KmsResolver"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
tox = "^3.23.0"
pytest = "^7.2.2"
mock = "^2.0"
pytest-cov = "^4.0.0"
sceptre = "^4.0"
tox-gh-matrix = "^0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
